# QvMeta

./: .gitmodules  CMakeLists.txt  README.md
